test/interaction/Issue1205.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : _4 Sort _4 [ at Issue1205.agda:10.25-35 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: piSort (Set p) (λ p₁ → piSort (Set p) (λ p' → _4 (p = p) (r = r) (P = P) (_~_ = _~_) (p = p₁) (p' = p'))) =< Set (lsuc p ⊔ lsuc r) (blocked on _4)" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 'no-paren)
(agda2-status-action "")
(agda2-info-action "*All Done*" "" nil)
((last . 1) . (agda2-goals-action '()))
